--- a/doc/snort_manual.tex
+++ b/doc/snort_manual.tex
@@ -1126,15 +1126,15 @@ block each packet and this count will be higher.
 by this instance of Snort.  Like blacklist, this is done by the DAQ or by Snort
 on subsequent packets.
 
-\item Int Blklst = packets that are GTP or Teredo encapsulated that are being
-blocked.  These packets could get the Blacklist verdict if \texttt{config
+\item Int Blklst = packets that are GTP, Teredo, 6in4 or 4in6 encapsulated that are
+being blocked.  These packets could get the Blacklist verdict if \texttt{config
 tunnel\_verdicts} was set for the given protocol.  Note that this count are
 output only if non-zero.  Also, this count is incremented on the first packet
 in the flow that alerts.  The alerting packet and all following packets on the
 flow will be counted under Block.
 
-\item Int Whtlst = packets that are GTP or Teredo encapsulated that are being
-allowed.  These packets could get the Whitelist verdict if \texttt{config
+\item Int Whtlst = packets that are GTP, Teredo, 6in4 or 4in6 encapsulated that are
+being allowed.  These packets could get the Whitelist verdict if \texttt{config
 tunnel\_verdicts} was set for the given protocol.  Note that this count are
 output only if non-zero.  Also, this count is incremented for all packets on
 the flow starting with the alerting packet.
@@ -2396,12 +2396,12 @@ the default is off.  \\
 \texttt{config policy\_mode: tap|inline|inline\_test} & Sets the policy
 mode to either \texttt{passive}, \texttt{inline} or \texttt{inline\_test}. \\
 
-\hline \texttt{config tunnel\_verdicts: gtp|teredo} & By default, whitelist and
-blacklist verdicts are handled internally by Snort for GTP and Teredo
+\hline \texttt{config tunnel\_verdicts: gtp|teredo|6in4|4in6} & By default, whitelist
+and blacklist verdicts are handled internally by Snort for GTP, Teredo, 6in4 and 4in6
 encapsulated traffic.  This means Snort actually gives the DAQ a pass or block
 verdict instead.  This is to workaround cases where the DAQ would apply
 the verdict to the whole tunnel instead of the individual session within the
-tunnel.  If your DAQ decodes GTP or Teredo correctly, setting this config
+tunnel.  If your DAQ decodes GTP, Teredo, 6in4 or 4in6 correctly, setting this config
 will allow the whitelist or blacklist verdict to go to the DAQ.  There is a
 modest performance boost by doing this where possible since Snort won't see the
 remaining packets on the session. \\
